tests/rosetta/out/Haskell/bin-given-limits.error
run error: exit status 1

/workspace/mochi/tests/rosetta/out/Haskell/bin-given-limits.hs:127:1: error:
    Multiple declarations of ‘main’
    Declared at: /workspace/mochi/tests/rosetta/out/Haskell/bin-given-limits.hs:119:1
                 /workspace/mochi/tests/rosetta/out/Haskell/bin-given-limits.hs:127:1
    |
127 | main = do
    | ^^^^
